--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mocha": "^2.3.4",
+    "pg": "^4.4.3",
+    "sequelize": "^3.15.0",
     "supertest": "^1.1.0"
   }
 }
