--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,12 @@ test-base:
     service: base
   command: ./bin/run-tests
 
+web-test:
+  extends:
+    service: base
+  links:
+    - db
+
 test:
   extends:
     service: test-base
