--- a/app/package.json
+++ b/app/package.json
@@ -15,5 +15,8 @@
     "pg": "^4.4.3",
     "sequelize": "^3.15.0",
     "supertest": "^1.1.0"
+  },
+  "devDependencies": {
+    "http-status": "^0.2.0"
   }
 }
