Add no-const-assign and prefer-const to eslint.
Update code.

--- a/app/.eslintrc.json
+++ b/app/.eslintrc.json
@@ -19,6 +19,12 @@
         "strict": [
             2,
             "global"
+        ],
+        "prefer-const": [
+            2
+        ],
+        "no-const-assign": [
+            2
         ]
     },
     "env": {
