--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,8 @@
     "mocha": "^2.3.4",
     "pg": "^4.4.3",
     "sequelize": "^3.15.0",
-    "supertest": "^1.1.0"
+    "supertest": "^1.1.0",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
     "eslint": "^2.5.3",
