--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,8 @@
     "pg": "^4.4.3",
     "sequelize": "^3.15.0",
     "supertest": "^1.1.0",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "winston-logstash": "^0.2.11"
   },
   "devDependencies": {
     "eslint": "^2.5.3",
