--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,7 @@
     "sequelize": "^3.15.0",
     "supertest": "^1.1.0",
     "winston": "^2.2.0",
-    "winston-logstash": "^0.2.11"
+    "winston-logstash-udp": "^0.1.1"
   },
   "devDependencies": {
     "eslint": "^2.5.3",
