Update supervisor app config.

--- a/container/files/etc/supervisor/conf.d/app.conf
+++ b/container/files/etc/supervisor/conf.d/app.conf
@@ -2,4 +2,4 @@
 stdout_logfile=/var/log/supervisor/%(program_name)s-stdout.log
 stderr_logfile=/var/log/supervisor/%(program_name)s-stderr.log
 directory=/srv/app
-command=node ./index.js
+command=node --no-deprecation ./dist/index.js
