--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-async-wrap": "^1.0.0",
     "http-status": "^0.2.3",
     "pg": "^6.1.0",
     "sequelize": "^3.27.0",
