--- a/app/package.json
+++ b/app/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "build": "tsc --noUnusedParameters --noUnusedLocals && echo built",
     "lint": "tslint ./test/**/*.ts ./src/**/*.ts && echo linted",
-    "test": "ava --tape ./dist/test/*.js ./dist/test/**/*.js | tap-spec",
-    "typings": "typings",
-    "tap-spec": "tap-spec"
+    "test": "ava --tape ./dist/test/*.js ./dist/test/**/*.js",
+    "typings": "typings"
   },
   "author": "",
   "license": "ISC",
@@ -26,7 +25,6 @@
   "devDependencies": {
     "ava": "^0.17.0",
     "supertest": "^2.0.1",
-    "tap-spec": "^4.1.1",
     "tslint": "^4.0.2",
     "typescript": "^2.0.10",
     "typings": "^2.0.0"
