Fix permissions issues with Dockerfile.
Update docker-compose to point dev volume to new app location.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ test-dev:
   # external_links:
     # - elk-server:log-egress
   volumes:
-    - ./app:/srv/app
+    - ./app:/home/es-bueno/app
 
 web:
   extends:
