Remove dependency on netcat apt package.
Update run-tests to use env validation script.
Create run-app script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,6 @@ before_script:
 - npm run typings install
 - npm run build
 - mkdir ./log
+script: ./bin/run-tests
 after_success:
 - test $TRAVIS_NODE_VERSION == "7" && git clean -xfd && ../bin/docker-push ihsw/es-bueno
