--- a/app/package.json
+++ b/app/package.json
@@ -4,29 +4,36 @@
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
-    "build": "tsc --noUnusedParameters --noUnusedLocals && echo built",
-    "lint": "tslint ./test/**/*.ts ./src/**/*.ts && echo linted",
-    "test": "ava --verbose ./dist/test/*.js ./dist/test/**/*.js",
-    "typings": "typings"
+    "build": "tsc && echo built",
+    "lint": "tslint ./src/**/*.ts && echo linted",
+    "test": "ava --verbose ./dist/src/test/*.js ./dist/src/test/**/*.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "async-middleware": "^1.0.1",
-    "body-parser": "^1.15.2",
-    "express": "^4.14.0",
+    "body-parser": "^1.16.0",
+    "express": "^4.14.1",
     "express-async-wrap": "^1.0.0",
-    "http-status": "^0.2.3",
-    "pg": "^6.1.0",
-    "sequelize": "^3.27.0",
-    "winston": "^2.3.0",
-    "winston-logstash-udp": "^0.1.1"
+    "http-status": "^0.2.5",
+    "pg": "^6.1.2",
+    "sequelize": "^3.30.1",
+    "winston": "^2.3.1",
+    "winston-logstash-udp": "^0.2.1"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
-    "supertest": "^2.0.1",
-    "tslint": "^4.0.2",
-    "typescript": "^2.0.10",
-    "typings": "^2.0.0"
+    "@types/body-parser": "0.0.33",
+    "@types/express": "^4.0.35",
+    "@types/http-status": "^0.2.29",
+    "@types/pg": "^6.1.35",
+    "@types/sequelize": "^3.4.38",
+    "@types/superagent": "^2.0.36",
+    "@types/supertest": "^2.0.0",
+    "@types/tape": "^4.2.28",
+    "@types/winston": "^2.2.0",
+    "ava": "^0.18.0",
+    "supertest": "^3.0.0",
+    "tslint": "^4.4.2",
+    "typescript": "^2.1.5"
   }
 }
