--- a/app/package.json
+++ b/app/package.json
@@ -14,12 +14,10 @@
     "async-middleware": "^1.0.1",
     "body-parser": "^1.16.0",
     "express": "^4.14.1",
-    "express-async-wrap": "^1.0.0",
     "http-status": "^0.2.5",
     "pg": "^6.1.2",
     "sequelize": "^3.30.1",
-    "winston": "^2.3.1",
-    "winston-logstash-udp": "^0.2.1"
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "@types/body-parser": "0.0.33",
@@ -29,7 +27,6 @@
     "@types/sequelize": "^3.4.38",
     "@types/superagent": "^2.0.36",
     "@types/supertest": "^2.0.0",
-    "@types/tape": "^4.2.28",
     "@types/winston": "^2.2.0",
     "ava": "^0.18.0",
     "supertest": "^3.0.0",
