--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,10 @@ services:
 - postgresql
 
 env:
-- DATABASE_HOST=localhost
-- APP_PORT=80
-- APP_LOG_DIR=`pwd`/log
+  global:
+  - DATABASE_HOST=localhost
+  - APP_PORT=80
+  - APP_LOG_DIR=`pwd`/log
 before_install:
 - psql -f ./db/container-files/docker-entrypoint-initdb.d/db.sql -U postgres
 - cd ./app
