--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc && echo built",
     "lint": "tslint ./src/**/*.ts && echo linted",
-    "test": "ava --verbose ./dist/test/*.js ./dist/test/**/*.js"
+    "test": "mocha",
+    "mocha": "mocha"
   },
   "author": "",
   "license": "ISC",
@@ -23,12 +24,14 @@
     "@types/body-parser": "0.0.33",
     "@types/express": "^4.0.35",
     "@types/http-status": "^0.2.29",
+    "@types/mocha": "^2.2.41",
     "@types/pg": "^6.1.35",
     "@types/sequelize": "^3.4.38",
     "@types/superagent": "^2.0.36",
     "@types/supertest": "^2.0.0",
     "@types/winston": "^2.2.0",
     "ava": "^0.18.0",
+    "mocha": "^3.4.2",
     "supertest": "^3.0.0",
     "tslint": "^4.4.2",
     "typescript": "^2.1.5"
