--- a/app/package.json
+++ b/app/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "tsc && echo built",
     "lint": "tslint ./src/**/*.ts && echo linted",
-    "test": "mocha",
-    "mocha": "mocha"
+    "test": "nyc mocha ./dist/test/*.js ./dist/test/**/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -32,6 +31,7 @@
     "@types/winston": "^2.2.0",
     "ava": "^0.18.0",
     "mocha": "^3.4.2",
+    "nyc": "^11.0.3",
     "supertest": "^3.0.0",
     "tslint": "^4.4.2",
     "typescript": "^2.1.5"
