--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "build": "tsc && echo built",
     "lint": "tslint ./src/**/*.ts && echo linted",
     "test": "mocha ./dist/test/*.js ./dist/test/**/*.js",
-    "test-coverage": "nyc --reporter=html test"
+    "test-coverage": "nyc --reporter=html mocha ./dist/test/*.js ./dist/test/**/*.js"
   },
   "author": "",
   "license": "ISC",
