--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,7 +7,7 @@
         "noUnusedLocals": true,
         "strictNullChecks": true,
         "removeComments": true,
-        "sourceMap": false,
+        "sourceMap": true,
         "rootDir": "./src",
         "outDir": "./dist"
     },
