--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,10 @@
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc && echo built",
+    "build:w": "tsc -w",
     "lint": "tslint ./src/**/*.ts && echo linted",
     "test": "mocha ./dist/test/*.js ./dist/test/**/*.js",
+    "test:w": "mocha ./dist/test/*.js ./dist/test/**/*.js -w",
     "test-coverage": "nyc --reporter=lcov npm test",
     "test-coverage-report": "nyc report",
     "test-coverage-check": "nyc check-coverage --lines 95 --functions 75 --branches 95",
@@ -15,30 +17,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "async-middleware": "^1.0.1",
-    "body-parser": "^1.16.0",
-    "express": "^4.14.1",
-    "http-status": "^0.2.5",
-    "pg": "^6.1.2",
-    "sequelize": "^3.30.1",
-    "winston": "^2.3.1"
+    "async-middleware": "^1.2.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "http-status": "^1.0.1",
+    "pg": "^7.4.1",
+    "sequelize": "^4.35.2",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
-    "@types/body-parser": "0.0.33",
-    "@types/express": "^4.0.35",
-    "@types/http-status": "^0.2.29",
-    "@types/mocha": "^2.2.41",
-    "@types/pg": "^6.1.35",
-    "@types/sequelize": "^3.4.38",
-    "@types/superagent": "^2.0.36",
-    "@types/supertest": "^2.0.0",
-    "@types/winston": "^2.2.0",
-    "ava": "^0.18.0",
+    "@types/body-parser": "^1.16.8",
+    "@types/express": "^4.11.1",
+    "@types/http-status": "^0.2.30",
+    "@types/mocha": "^2.2.48",
+    "@types/pg": "^7.4.5",
+    "@types/sequelize": "^3.30.5",
+    "@types/superagent": "^2.3.2",
+    "@types/supertest": "^2.0.4",
+    "@types/winston": "^2.3.8",
     "coveralls": "^3.0.0",
-    "mocha": "^3.4.2",
-    "nyc": "^11.0.3",
+    "mocha": "^5.0.4",
+    "nyc": "^11.4.1",
     "supertest": "^3.0.0",
-    "tslint": "^4.4.2",
-    "typescript": "^2.1.5"
+    "tslint": "^5.9.1",
+    "typescript": "^2.7.2"
   }
 }
