--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "async-middleware": "^1.2.1",
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "http-status": "^1.0.1",
@@ -26,6 +27,7 @@
     "winston": "^2.4.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.8",
     "@types/express": "^4.11.1",
     "@types/http-status": "^0.2.30",
