--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,8 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "http-status": "^1.0.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.4.1",
     "sequelize": "^4.35.2",
     "winston": "^2.4.0"
@@ -32,8 +34,10 @@
     "@types/express": "^4.11.1",
     "@types/http-status": "^0.2.30",
     "@types/mocha": "^2.2.48",
+    "@types/passport": "^0.4.3",
+    "@types/passport-local": "^1.0.32",
     "@types/pg": "^7.4.5",
-    "@types/sequelize": "^3.30.5",
+    "@types/sequelize": "^4.27.10",
     "@types/superagent": "^2.3.2",
     "@types/supertest": "^2.0.4",
     "@types/winston": "^2.3.8",
