--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "http-status": "^1.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -32,6 +33,7 @@
     "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.8",
     "@types/express": "^4.11.1",
+    "@types/express-session": "^1.15.8",
     "@types/http-status": "^0.2.30",
     "@types/mocha": "^2.2.48",
     "@types/passport": "^0.4.3",
