--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "async-middleware": "^1.2.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "http-status": "^1.0.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.8",
+    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
     "@types/express-session": "^1.15.8",
     "@types/http-status": "^0.2.30",
