--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,6 @@
     "async-middleware": "^1.2.1",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
-    "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "http-status": "^1.0.1",
@@ -33,7 +32,6 @@
   "devDependencies": {
     "@types/bcrypt": "^1.0.0",
     "@types/body-parser": "^1.16.8",
-    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
     "@types/express-session": "^1.15.8",
     "@types/http-status": "^0.2.30",
@@ -42,13 +40,14 @@
     "@types/passport-local": "^1.0.32",
     "@types/pg": "^7.4.5",
     "@types/sequelize": "^4.27.10",
-    "@types/superagent": "^2.3.2",
     "@types/supertest": "^2.0.4",
+    "@types/tough-cookie": "^2.3.2",
     "@types/winston": "^2.3.8",
     "coveralls": "^3.0.0",
     "mocha": "^5.0.4",
     "nyc": "^11.4.1",
     "supertest": "^3.0.0",
+    "tough-cookie": "^2.3.4",
     "tslint": "^5.9.1",
     "typescript": "^2.7.2"
   }
