--- a/app/package.json
+++ b/app/package.json
@@ -42,6 +42,7 @@
     "@types/sequelize": "^4.27.10",
     "@types/supertest": "^2.0.4",
     "@types/tough-cookie": "^2.3.2",
+    "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.8",
     "coveralls": "^3.0.0",
     "mocha": "^5.0.4",
@@ -49,6 +50,7 @@
     "supertest": "^3.0.0",
     "tough-cookie": "^2.3.4",
     "tslint": "^5.9.1",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "uuid": "^3.2.1"
   }
 }
