--- a/app/package.json
+++ b/app/package.json
@@ -33,7 +33,6 @@
     "@types/express": "^4.11.1",
     "@types/express-session": "^1.15.8",
     "@types/http-status": "^0.2.30",
-    "@types/mocha": "^2.2.48",
     "@types/passport": "^0.4.3",
     "@types/passport-local": "^1.0.32",
     "@types/pg": "^7.4.5",
@@ -42,8 +41,8 @@
     "@types/tough-cookie": "^2.3.2",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.8",
+    "ava": "^0.25.0",
     "coveralls": "^3.0.0",
-    "mocha": "^5.0.4",
     "nyc": "^11.4.1",
     "supertest": "^3.0.0",
     "tough-cookie": "^2.3.4",
