Fix test and test:w scripts.

--- a/app/package.json
+++ b/app/package.json
@@ -7,8 +7,8 @@
     "build": "tsc && echo built",
     "build:w": "tsc -w",
     "lint": "tslint ./src/**/*.ts && echo linted",
-    "test": "mocha --exit ./dist/test/*.js ./dist/test/**/*.js",
-    "test:w": "mocha ./dist/test/*.js ./dist/test/**/*.js -w",
+    "test": "ava -v ./dist/test/*.js",
+    "test:w": "ava -v -w ./dist/test/*.js",
     "test-coverage": "nyc --reporter=lcov npm test",
     "test-coverage-report": "nyc report",
     "test-coverage-check": "nyc check-coverage --lines 95 --functions 75 --branches 95",
